# SGEL

./: .gitignore  Action_8hpp.html  Action_8hpp.js  Action_8hpp_source.html  Animation_8hpp.html  Animation_8hpp_source.html  Assets_8cpp.html  Assets_8hpp.html  Assets_8hpp.js  Assets_8hpp_source.html  CMakeLists.txt  CameraUtils_8hpp.html  CameraUtils_8hpp.js  CameraUtils_8hpp_source.html  Doxyfile  Engine_8cpp.html  Engine_8hpp.html  Engine_8hpp_source.html  EntityManager_8cpp.html  EntityManager_8hpp.html  EntityManager_8hpp_source.html  FpsManager_8cpp.html  FpsManager_8hpp.html  FpsManager_8hpp.js  FpsManager_8hpp_source.html  PhysicsUtils_8hpp.html  PhysicsUtils_8hpp.js  PhysicsUtils_8hpp_source.html  README.md  README_8md.html  SGEL.hpp  SGEL_8hpp.html  SGEL_8hpp_source.html  Scene_8hpp.html  Scene_8hpp_source.html  SparseSet_8hpp.html  SparseSet_8hpp.js  SparseSet_8hpp_source.html  SpatialGrid_8cpp.html  SpatialGrid_8hpp.html  (+105 more)
.github/workflows/: deploy-docs-to-GHPages.yml  deploy-to-GHPages.yml
example/: CMakeLists.txt
example/01_basic_window/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  creatingWindow.cpp
example/02_assets_and_animations/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp
example/03_inputActions/: CMakeLists.txt  DemoScene.cpp
example/03_input_actions/: DemoScene.cpp  DemoScene.hpp
example/04_managing_entities/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  managingEntities.cpp
example/05_camera_system/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  cameraSystem.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  defines_0.js  (+67 more)
src/: Action.hpp  Animation.hpp  Assets.cpp  Assets.hpp  CameraUtils.hpp  Engine.cpp  Engine.hpp  EntityManager.cpp  EntityManager.hpp  FpsManager.cpp  FpsManager.hpp  PhysicsUtils.hpp  Scene.hpp  SparseSet.hpp  SpatialGrid.cpp  SpatialGrid.hpp  Sprite.hpp  Types.hpp
